# simpleserver

./: .gitignore  README.md  pyproject.toml
simpleserver/: __init__.py  based_client.py  simple_client.py  simple_server.py
